# python-knowledge

./: .gitignore  DEBUGGING.md  LICENSE  README.md  _TODO.md  argparse--basic-subparser.py  argparse--basic.py  argparse--multiple-values.py  arrays.md  assignment-expressions.py  bs4--basics.py  dataclass--TODO.py  http--fileserver.py  importlib.md  interactive-shell-basics.py  interactive-shell.md  logging--basics.py  mako--basics-template1.txt  mako--basics-template2.html  mako--basics-template3-base.html  mako--basics-template3-child.html  mako--basics.py  markdown--basic.py  markdown--mistune.py  markdown--page-maker.py  match-statement.py  notes--MISC.md  notes--packaging.md  ods-parsing.py  pathlib--basics.py  random-string-and-word-generation.py  regex--examples.py  string--topics.py  subprocess--simple-async.py  subprocess--simple-wrapper.py  subprocess--simplest.py  terminal--color-256ansi.py  terminal--color-scaffold.py  terminal--color-tutorial.py  terminal--rich-examples.py  (+1 more)
_raw/: marshmallow--try.py  pydantic--try.py  time-dates-and-b58.py
notes/: identifiers-and-tokens.md  notes--core-topics.md  python-pillow.md  serialization-libraries.md  virtual-environments.md
packaging/: NOTES.md  TODO.md
packaging/jeffthing/: MANIFEST.in  README.md  clean.sh  pyproject.toml
packaging/jeffthing/src/jeffthing/: example.py  main_tool.py
python-lib/: README.md  installation.sh  test-script.py
python-lib/lib-jtools/: ssh.py
